# anime-manager-1

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/db/: database.py  models.py  schema_compat.py
backend/app/integrations/: nas115.py  qbittorrent.py  tmdb.py
backend/app/routers/: backup.py  dashboard.py  diagnostics.py  downloads.py  file_analysis.py  health.py  imports.py  logs.py  matching.py  rename.py  settings.py  setup.py  sources.py
backend/app/schemas/: backup.py  dashboard.py  diagnostics.py  downloads.py  file_analysis.py  imports.py  logs.py  matching.py  rename.py  settings.py  setup.py  sources.py
backend/app/services/: backup_service.py  dashboard_service.py  diagnostics_service.py  download_service.py  file_analysis_service.py  import_service.py  log_service.py  matching_service.py  rename_service.py  settings_service.py  setup_service.py  source_service.py
backend/app/utils/: emby_naming.py  file_analyzer.py  info_hash.py  metadata_proxy.py  path_guard.py  secrets.py  (+2 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_auto_rename.py  test_backup.py  test_dashboard.py  test_diagnostics.py  test_download_schema_upgrade.py  test_downloads.py  test_file_analysis.py  test_health.py  test_imports.py  test_logs.py  test_matching.py  test_nas115_provider 2.py  test_nas115_provider.py  test_resource_items.py  test_secrets.py  test_settings.py  test_setup.py  test_sources.py
(+88 files in other folders)
