[project]
name = "anime-library-manager-backend"
version = "0.1.0"
description = "番剧自动整理管家后端"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "apscheduler>=3.10.0",
  "httpx>=0.27.0",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = []
exclude = [
  "^\\.venv/",
  "^\\.pytest_cache/",
  "^\\.ruff_cache/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
